# coursework-2

./: main.py  pyproject.toml
data/: vacancies.json
src/: base_parser.py  base_saver.py  file_manager.py  hh_parser.py  json_saver.py  parsers.py  utils.py  vacancies.py
tests/: conftest.py  test_file_manager.py  test_hh_parser.py  test_json_saver.py  test_parsers.py  test_utils.py  test_vacancies.py
